# Agent-Orchestrated-Hybrid-RAG

./: .gitignore  README.md  evaluation.ipynb  main.py  pyproject.toml
data/: bielik_results.jsonl  gpt_results.jsonl  lek_pl_sample.json  medical-exams-LEK-PL-2008-2024.json
src/hybrid_rag/: embedding_model.py  hybrid_rag.py  knowledge_database.py  main.py
src/mcp_server/: main.py
src/mcp_server/tools/: hybrid_rag.py
